--- a/_sass/_button.scss
+++ b/_sass/_button.scss
@@ -1,5 +1,5 @@
 .button {
-	background-color: blue;
+	background-color: #2B74B7;
 	border-radius: 3px;
 	color: white;
 	display: inline-block;
@@ -10,6 +10,6 @@
 	text-decoration: none;
 
 	&:hover {
-		background-color: darken(blue, 30%);
+		background-color: darken(#2B74B7, 30%);
 	}
 }
