--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,3 +1,13 @@
+a {
+	color: #2B74B7;
+	font-weight: bold;
+	text-decoration: none;
+
+	&:hover {
+		color: darken(#2B74B7, 30%);
+	}
+}
+
 body {
 	color: 	#37352F;
 	font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
