Add Example Pitch and Favicon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
 <meta name="twitter:card" content="summary">
 
 <!-- Creator -->
-<meta name="twitter:creator" content="@18F">
+<meta name="twitter:creator" content="@uscensusbureau">
 <!-- Title -->
 {% if page.title %}
   <title>{{ site.title }} | {{ page.title }}</title>
@@ -29,7 +29,7 @@
 {% endif %}
 
 <!-- Twitter Site -->
-<meta name="twitter:site" content="@18F" />
+<meta name="twitter:site" content="@uscensusbureau" />
 
 <!-- Description -->
 {% if page.seo_excerpt %}
@@ -60,7 +60,7 @@
 
 <!-- Date -->
 {% if page.date %}
-  <meta name="date" content="{{ page.date }}"" scheme="YYYY-MM-DD">
+  <meta name="date" content="{{ page.date }}" scheme="YYYY-MM-DD">
 {% endif %}
 
 <!-- Tags -->
@@ -79,9 +79,7 @@
 <!-- Favicons
 ================================================== -->
 
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/assets/favicon-16x16.png">
   <link rel="manifest" href="{{ site.baseurl }}/assets/site.webmanifest">
 
 <!-- CSS
