--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -10,7 +10,7 @@ section {
 }
 
 .cta-container {
-	background-color: rgb(241, 241, 239);
+	background-color: #f5f5f5;
 	grid-template-columns: 50px 1fr;
 	margin-top: 2rem;
 	padding: 1.5rem;
@@ -18,6 +18,18 @@ section {
 	h3 {
 		margin-top: 0
 	}
+}
+
+.example-pitch {
+	border-left: 3px solid currentcolor;
+  padding-left: 14px;
+  padding-right: 14px;
+
+  h5,
+  p {
+  	margin-bottom: 1rem;
+  	margin-top: 0.5rem;
+  }
 }
 
 .milestone {
