--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,4 @@
+<head>
 <!-- Basic Page Needs
 ================================================== -->
   <meta charset="utf-8">
@@ -80,19 +81,10 @@
 ================================================== -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/favicon-32x32.png">
-  <link rel="manifest" href="{{ site.baseurl }}/assets/site.webmanifest">
 
 <!-- CSS
 =================================================== -->
   <link rel="stylesheet" href="{{ '/assets/css/styles.css' | prepend: site.baseurl }}" media="all" />
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id={{ page.gtm_id }}"></script>
-  <script>
-  	/*
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', '{{ page.gtm_id }}');
-    /*
-  </script>
+  {% include analytics.html %}
+</head>
